manifests/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syfter-api
  namespace: syfter
  labels:
    app: syfter-api
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: syfter-api-tls
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
    - port: 4443
      targetPort: 4443
      protocol: TCP
      name: proxy
  selector:
    app: syfter-api
